[workspace]
resolver = "2"
members = ["guest", "demo"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
guest = { path = "guest" }
serde = "1.0"
tracing = "0.1.40"
alloy = { version = "1", default-features = false, features = ["essentials"] }
alloy-primitives = { version = "1.2.1", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.2.1" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.39" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
hex = "0.4"

risc0-zkvm = { version = "3.0.3", default-features = false }
risc0-build = { version = "3.0.3" }

boundless-market = { git = "https://github.com/boundless-xyz/boundless.git", branch = "ec2/shrink_bitvm2_mono" }
shrink_bitvm2 = { git = "https://github.com/boundless-xyz/boundless.git", branch = "ec2/shrink_bitvm2_mono", default-features = false }

[patch.crates-io]
risc0-ethereum-contracts = { git = "https://github.com/ec2/risc0-ethereum.git", rev = "a5bf55285c5ea2e65de9c53421987449e2db046d" }
risc0-aggregation = { git = "https://github.com/ec2/risc0-ethereum.git", rev = "a5bf55285c5ea2e65de9c53421987449e2db046d" }
# Needs these patches until this is backported https://github.com/risc0/risc0/pull/3370
risc0-groth16 = { git = "https://github.com/boundless-xyz/risc0.git", branch = "ec2/v3.0.3-backport-3370" }
risc0-groth16-sys = { git = "https://github.com/boundless-xyz/risc0.git", branch = "ec2/v3.0.3-backport-3370" }
risc0-zkp = { git = "https://github.com/boundless-xyz/risc0.git", branch = "ec2/v3.0.3-backport-3370" }
risc0-binfmt = { git = "https://github.com/boundless-xyz/risc0.git", branch = "ec2/v3.0.3-backport-3370" }
risc0-build = { git = "https://github.com/boundless-xyz/risc0.git", branch = "ec2/v3.0.3-backport-3370" }
risc0-zkvm = { git = "https://github.com/boundless-xyz/risc0.git", branch = "ec2/v3.0.3-backport-3370" }
risc0-circuit-recursion = { git = "https://github.com/boundless-xyz/risc0.git", branch = "ec2/v3.0.3-backport-3370" }
