[workspace]
resolver = "2"
members = ["guest", "demo"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
guest = { path = "guest" }
serde = "1.0"
tracing = "0.1.40"
alloy = { version = "1", default-features = false, features = ["essentials"] }
alloy-primitives = { version = "1.2.1", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.2.1" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.39" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
hex = "0.4"

risc0-zkvm = { version = "3.0.3", default-features = false }
risc0-build = { version = "3.0.3" }

boundless-market = { git = "https://github.com/boundless-xyz/boundless.git", branch = "ec2/shrink_bitvm2" }
blake3_groth16 = { git = "https://github.com/boundless-xyz/boundless.git", branch = "ec2/shrink_bitvm2", default-features = false }
